feat: usable llvmpipe

--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -1,14 +1,5 @@
-# New versions need clock_gettime
-# which is supported in 10.12 and later
-macos_min_version:             # [osx and x86_64]
-  - 10.12                      # [osx and x86_64]
-MACOSX_DEPLOYMENT_TARGET:      # [osx and x86_64]
-  - 10.12                      # [osx and x86_64]
-c_compiler:
-  - gcc
-c_compiler_version: 10
-cxx_compiler:
-  - gxx
-cxx_compiler_version: 10
-target_platform:
-  - linux-64
+c_compiler: gcc
+c_compiler_version: 12
+cxx_compiler: gxx
+cxx_compiler_version: 12
+target_platform: linux-64
