--- a/meta.yaml
+++ b/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 91fe6f20339884e37a7c47bfba42fb1cd397512c9ed5ad423de369f047cd8b5c
 
 build:
-  number: 0
+  number: 4
 
 requirements:
   build:
@@ -32,7 +32,7 @@ requirements:
     - libdrm                       # [linux]
     - elfutils                     # [linux]
     - ncurses
-    - llvmdev
+    - llvmdev 14
     - xorg-libx11
     - xorg-libxext
     - xorg-xextproto
@@ -44,6 +44,7 @@ requirements:
     - xorg-libxdamage
 
   run:
+    - libllvm14
     - xorg-libx11
     - xorg-libxext
     - xorg-xextproto
