--- a/meta.yaml
+++ b/meta.yaml
@@ -34,26 +34,12 @@ requirements:
     - llvmdev 14
     - xorg-libx11
     - xorg-libxext
-    - xorg-xextproto
-    - xorg-xf86vidmodeproto
-    - xorg-libxrandr
-    - xorg-libxfixes
-    - xorg-glproto
+    - xorg-libxrandr         # necessary
+    - xorg-glproto           # necessary
     - libxcb
-    - xorg-libxdamage
 
   run:
     - libllvm14
-
-test:
-  requires:
-    - pkg-config
-  commands:
-    - test -f $PREFIX/lib/libGL${SHLIB_EXT}               # [linux]
-    - test -f $PREFIX/lib/libOSMesa${SHLIB_EXT}           # [linux]
-    - test -f $PREFIX/lib/libglapi${SHLIB_EXT}            # [linux]
-    - pkg-config --exists osmesa
-    - pkg-config --exists gl
 
 about:
   home: https://www.mesa3d.org
